--- a/zhihuijiayuan/app/src/main/res/values/colors.xml
+++ b/zhihuijiayuan/app/src/main/res/values/colors.xml
@@ -90,4 +90,5 @@
     <color name="gray_f5">#F5F5F5</color>
     <color name="gray_aa">#AAAAAA</color>
     <color name="gray_b8">#B8B8B8</color>
+    <color name="gray_ea">#EAEAEA</color>
 </resources>
