--- a/zhihuijiayuan/app/src/main/res/drawable/layer_share.xml
+++ b/zhihuijiayuan/app/src/main/res/drawable/layer_share.xml
@@ -5,7 +5,7 @@
         android:right="13dp"
         android:top="6.5dp">
         <shape android:shape="oval">
-            <solid android:color="@color/gray_66"/>
+            <solid android:color="@android:color/black"/>
             <size
                 android:width="4dp"
                 android:height="4dp"/>
@@ -17,7 +17,7 @@
         android:top="5dp"
         android:bottom="5dp">
         <shape android:shape="oval">
-            <solid android:color="@color/gray_66"/>
+            <solid android:color="@android:color/black"/>
             <size
                 android:width="7dp"
                 android:height="7dp"/>
@@ -30,7 +30,7 @@
         android:left="13dp"
         android:top="6.5dp">
         <shape android:shape="oval">
-            <solid android:color="@color/gray_66"/>
+            <solid android:color="@android:color/black"/>
             <size
                 android:width="4dp"
                 android:height="4dp"/>
