--- a/zhihuijiayuan/app/src/main/res/drawable/shape_btn_cardcontent_corner.xml
+++ b/zhihuijiayuan/app/src/main/res/drawable/shape_btn_cardcontent_corner.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <corners android:radius="15dp" />
+    <corners android:radius="14.5dp" />
 
-    <stroke android:width="1dp" android:color="@color/colorGrayLine02"/>
+    <stroke android:width="0.5dp" android:color="@color/gray_ea"/>
 
-    <solid android:color="@color/colorBgTranCardBtn02"/>
 </shape>
