--- a/zhihuijiayuan/app/src/main/res/layout/activity_query_card.xml
+++ b/zhihuijiayuan/app/src/main/res/layout/activity_query_card.xml
@@ -93,7 +93,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:overScrollMode="never"
-                        android:scrollbars="none">
+                        android:scrollbars="none"
+                        android:layoutAnimation="@anim/anim_recyclerview_item">
 
                     </android.support.v7.widget.RecyclerView>
                 </com.scwang.smartrefresh.layout.SmartRefreshLayout>
