--- a/zhihuijiayuan/app/src/main/res/layout/activity_search_card.xml
+++ b/zhihuijiayuan/app/src/main/res/layout/activity_search_card.xml
@@ -96,7 +96,8 @@
                     android:id="@+id/recycler_card_find"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:scrollbars="none">
+                    android:scrollbars="none"
+                    android:layoutAnimation="@anim/anim_recyclerview_item">
 
                 </android.support.v7.widget.RecyclerView>
             </com.scwang.smartrefresh.layout.SmartRefreshLayout>
