--- a/zhihuijiayuan/app/src/main/res/layout/fragment_home.xml
+++ b/zhihuijiayuan/app/src/main/res/layout/fragment_home.xml
@@ -153,7 +153,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scrollbars="none"
-                android:visibility="gone">
+                android:visibility="gone"
+                android:layoutAnimation="@anim/anim_recyclerview_item">
 
             </android.support.v7.widget.RecyclerView>
 
