--- a/zhihuijiayuan/app/src/main/res/layout/fragment_home.xml
+++ b/zhihuijiayuan/app/src/main/res/layout/fragment_home.xml
@@ -154,6 +154,7 @@
                 android:layout_height="match_parent"
                 android:scrollbars="none"
                 android:visibility="gone"
+                android:layout_marginBottom="45dp"
                 android:layoutAnimation="@anim/anim_recyclerview_item">
 
             </android.support.v7.widget.RecyclerView>
