删除卡片 关注卡片 蓝牙

--- a/zhihuijiayuan/app/src/main/res/layout/activity_card_content.xml
+++ b/zhihuijiayuan/app/src/main/res/layout/activity_card_content.xml
@@ -140,5 +140,44 @@
                 </LinearLayout>
             </RelativeLayout>
         </LinearLayout>
+
+        <RelativeLayout
+            android:id="@+id/rl_focus_card"
+            android:layout_width="match_parent"
+            android:layout_height="53dp"
+            android:background="@drawable/bound_00_5db"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="60dp"
+            android:layout_marginLeft="8.5dp"
+            android:layout_marginRight="8.5dp"
+            android:visibility="gone">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="关注卡片后，可从首页快速进入噢～"
+                android:textColor="@android:color/white"
+                android:textSize="13sp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="20dp"/>
+
+            <TextView
+                android:id="@+id/tv_focus_card"
+                android:layout_width="60dp"
+                android:layout_height="27dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/bound_0d8_3dp"
+                android:text="关注"
+                android:gravity="center"
+                android:textColor="@android:color/white"/>
+
+            <ImageView
+                android:id="@+id/iv_close_focus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:src="@mipmap/ic_close_focus"/>
+        </RelativeLayout>
     </FrameLayout>
 </layout>
