--- a/zhihuijiayuan/app/src/main/res/values/colors.xml
+++ b/zhihuijiayuan/app/src/main/res/values/colors.xml
@@ -91,4 +91,5 @@
     <color name="gray_aa">#AAAAAA</color>
     <color name="gray_b8">#B8B8B8</color>
     <color name="gray_ea">#EAEAEA</color>
+    <color name="gray_9600">#96000000</color>
 </resources>
