--- a/zhihuijiayuan/app/src/main/res/values-v21/styles.xml
+++ b/zhihuijiayuan/app/src/main/res/values-v21/styles.xml
@@ -2,11 +2,14 @@
 
     <!--底部导航菜单的单选按钮的样式-->
     <style name="bottom_menu_rb">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">1</item>
         <item name="android:layout_marginLeft">5dp</item>
         <item name="android:button">@null</item>
         <item name="android:gravity">center</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/rgs_tv_color</item>
     </style>
 
 
