隐藏取消关注

--- a/zhihuijiayuan/app/src/main/res/drawable/circle_seekbar.xml
+++ b/zhihuijiayuan/app/src/main/res/drawable/circle_seekbar.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="oval"
        android:useLevel="false">
-    <solid android:color="@color/blueText"/>
+    <solid android:color="@color/blue_597"/>
     <size
         android:width="15dp"
         android:height="15dp"/>
