--- a/zhihuijiayuan/app/src/main/res/drawable/edt_bg.xml
+++ b/zhihuijiayuan/app/src/main/res/drawable/edt_bg.xml
@@ -4,5 +4,5 @@
     <corners android:radius="5dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/grayLine" />
+        android:color="@color/gray_b4" />
 </shape>
