--- a/zhihuijiayuan/app/src/main/res/layout/item_bt_recycler.xml
+++ b/zhihuijiayuan/app/src/main/res/layout/item_bt_recycler.xml
@@ -20,6 +20,6 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/appTextBlue"
+        android:background="@color/blue_0d8"
         android:text="" />
 </LinearLayout>
