--- a/zhihuijiayuan/app/src/main/res/values/colors.xml
+++ b/zhihuijiayuan/app/src/main/res/values/colors.xml
@@ -92,4 +92,6 @@
     <color name="gray_b8">#B8B8B8</color>
     <color name="gray_ea">#EAEAEA</color>
     <color name="gray_9600">#96000000</color>
+    <color name="blue_597">#597bba</color>
+    <color name="gray_b4">#B4B4B4</color>
 </resources>
