--- a/zhihuijiayuan/app/src/main/res/layout/fragment_me.xml
+++ b/zhihuijiayuan/app/src/main/res/layout/fragment_me.xml
@@ -12,7 +12,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="none">
+        android:scrollbars="none"
+        android:background="@color/gray_f8">
 
         <LinearLayout
             android:layout_width="match_parent"
