--- a/zhihuijiayuan/app/src/main/res/layout/fragment_message.xml
+++ b/zhihuijiayuan/app/src/main/res/layout/fragment_message.xml
@@ -194,7 +194,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="7dp"
                         android:text="您暂时还没有消息"
-                        android:textColor="#666666"
+                        android:textColor="@color/gray_66"
                         android:textSize="18sp" />
                 </LinearLayout>
             </FrameLayout>
