--- a/zhihuijiayuan/app/src/main/res/values/colors.xml
+++ b/zhihuijiayuan/app/src/main/res/values/colors.xml
@@ -94,4 +94,5 @@
     <color name="gray_9600">#96000000</color>
     <color name="blue_597">#597bba</color>
     <color name="gray_b4">#B4B4B4</color>
+    <color name="red_e32">#E32A24</color>
 </resources>
