--- a/zhihuijiayuan/app/src/main/res/layout/layout_update_popup.xml
+++ b/zhihuijiayuan/app/src/main/res/layout/layout_update_popup.xml
@@ -18,12 +18,15 @@
             android:layout_marginRight="5dp">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/iv_cancel_update"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_gravity="right"
+                android:scaleType="fitEnd"
                 android:src="@mipmap/btn_upate_close"/>
 
             <TextView
+                android:id="@+id/tv_cancel_update"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:tag="beta_cancel_button"/>
