--- a/zhihuijiayuan/app/src/main/res/layout/activity_version_explain.xml
+++ b/zhihuijiayuan/app/src/main/res/layout/activity_version_explain.xml
@@ -86,8 +86,41 @@
             android:layout_centerHorizontal="true"
             android:layout_gravity="bottom"
             android:layout_marginBottom="61dp"
-            android:text="版本号：1.0.0.1"
             android:textColor="@color/colorAccent"
-            android:textSize="13sp" />
+            android:textSize="13sp"
+            android:text="1111111111"/>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginBottom="20dp"
+            android:layout_alignParentBottom="true">
+            <TextView
+                android:id="@+id/tv_agreement_user"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="《用户协议》"
+                android:textSize="10.5sp"
+                android:textColor="@color/blue_0d8"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="和"
+                android:textSize="10.5sp"
+                android:textColor="@color/gray_33"/>
+            <TextView
+                android:id="@+id/tv_privacy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="《隐私声明》"
+                android:textSize="10.5sp"
+                android:textColor="@color/blue_0d8"/>
+        </LinearLayout>
+
     </RelativeLayout>
+
+
 </layout>
