--- a/zhihuijiayuan/app/src/main/res/layout/activity_scan_qrcode.xml
+++ b/zhihuijiayuan/app/src/main/res/layout/activity_scan_qrcode.xml
@@ -12,7 +12,8 @@
     <cn.bertsir.zbar.CameraPreview
         android:id="@+id/cp_scan"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_gravity="bottom">
 
     </cn.bertsir.zbar.CameraPreview>
 
@@ -28,7 +29,8 @@
         android:background="@color/colorPrimary"
         android:gravity="center"
         android:orientation="horizontal"
-        android:paddingTop="25dp">
+        android:paddingTop="25dp"
+        android:visibility="visible">
 
         <LinearLayout
             android:id="@+id/ll_scan_back"
