--- a/zhihuijiayuan/app/src/main/res/layout/activity_feedback.xml
+++ b/zhihuijiayuan/app/src/main/res/layout/activity_feedback.xml
@@ -176,27 +176,19 @@
                 </LinearLayout>
             </LinearLayout>
 
-            <android.support.v7.widget.CardView
+            <Button
+                android:id="@+id/btn_feedback"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:layout_alignParentBottom="true"
+                android:background="@drawable/bound_0d8_4dp"
+                android:text="提交"
+                android:textColor="@color/colorWhite"
                 android:layout_marginBottom="23dp"
                 android:layout_marginLeft="13dp"
                 android:layout_marginRight="13dp"
-                app:cardBackgroundColor="@color/colorPrimary"
-                app:cardCornerRadius="4dp"
-                app:cardElevation="0dp">
+                android:layout_alignParentBottom="true"
+                android:textSize="15sp" />
 
-                <Button
-                    android:id="@+id/btn_feedback"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@null"
-                    android:text="提交"
-                    android:textColor="@color/colorWhite"
-                    android:textSize="15sp" />
-
-            </android.support.v7.widget.CardView>
 
         </RelativeLayout>
     </LinearLayout>
