--- a/zhihuijiayuan/app/src/main/res/layout/activity_personal_profile.xml
+++ b/zhihuijiayuan/app/src/main/res/layout/activity_personal_profile.xml
@@ -345,25 +345,17 @@
             </LinearLayout>
 
 
-            <android.support.v7.widget.CardView
+            <Button
+                android:id="@+id/btn_edit_info"
                 android:layout_width="match_parent"
                 android:layout_height="42dp"
                 android:layout_marginLeft="13dp"
                 android:layout_marginTop="40dp"
                 android:layout_marginRight="13dp"
-                app:cardBackgroundColor="@color/colorPrimary"
-                app:cardCornerRadius="4dp"
-                app:cardElevation="0dp">
-
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@null"
-                    android:onClick="updatePersonalInfo"
-                    android:text="保存"
-                    android:textColor="@color/colorWhite"/>
-
-            </android.support.v7.widget.CardView>
+                android:background="@drawable/bound_0d8_4dp"
+                android:onClick="updatePersonalInfo"
+                android:text="保存"
+                android:textColor="@color/colorWhite"/>
 
             <TextView
                 android:layout_width="match_parent"
