--- a/zhihuijiayuan/app/src/main/res/layout/layout_voice_popup.xml
+++ b/zhihuijiayuan/app/src/main/res/layout/layout_voice_popup.xml
@@ -1,69 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <data>
-
-    </data>
-
-    <android.support.v7.widget.CardView
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
+        android:layout_height="180dp"
+        android:orientation="vertical"
+        android:background="@android:color/white">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/text_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="33dp"
+            android:gravity="center"
+            android:text="按住说话"
+            android:textColor="@color/colorTextGray"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/btn_voice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:src="@mipmap/btn_voice" />
+
+            <tendency.hz.zhihuijiayuan.widget.WaveView
+                android:id="@+id/waveView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true" />
 
             <TextView
-                android:id="@+id/text_title"
-                android:layout_width="match_parent"
+                android:id="@+id/btn_cancel"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="33dp"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="53dp"
+                android:layout_toLeftOf="@id/btn_voice"
                 android:gravity="center"
-                android:text="按住说话"
+                android:text="取消"
                 android:textColor="@color/colorTextGray"
-                android:textSize="16sp"
+                android:textSize="15sp"
                 android:textStyle="bold" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="42dp"
-                android:layout_marginTop="30dp"
+            <TextView
+                android:id="@+id/btn_clear"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="53dp"
+                android:layout_toRightOf="@id/btn_voice"
                 android:gravity="center"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/btn_cancel"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:gravity="center"
-                    android:text="取消"
-                    android:textColor="@color/colorTextGray"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
-
-                <ImageView
-                    android:id="@+id/btn_voice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="53dp"
-                    android:layout_marginRight="53dp"
-                    android:src="@mipmap/btn_voice" />
-
-                <TextView
-                    android:id="@+id/btn_clear"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="清除"
-                    android:textColor="@color/colorTextGray"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
+                android:text="清除"
+                android:textColor="@color/colorTextGray"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+        </RelativeLayout>
+    </LinearLayout>
 </layout>
+
+
+
+
+
