--- a/zhihuijiayuan/app/src/main/res/layout/layout_voice_popup.xml
+++ b/zhihuijiayuan/app/src/main/res/layout/layout_voice_popup.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="180dp"
@@ -10,9 +10,8 @@
         <TextView
             android:id="@+id/text_title"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="33dp"
-            android:gravity="center"
+            android:layout_height="50dp"
+            android:gravity="center_horizontal|bottom"
             android:text="按住说话"
             android:textColor="@color/colorTextGray"
             android:textSize="16sp"
@@ -20,7 +19,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="130dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -30,11 +29,18 @@
                 android:layout_centerInParent="true"
                 android:src="@mipmap/btn_voice" />
 
-            <tendency.hz.zhihuijiayuan.widget.WaveView
-                android:id="@+id/waveView"
+            <tendency.hz.zhihuijiayuan.widget.SpreadView
+                android:id="@+id/spread_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true" />
+                android:layout_centerInParent="true"
+                app:spread_center_color="@color/colorAccent"
+                app:spread_delay_milliseconds="50"
+                app:spread_distance="5"
+                app:spread_max_radius="60"
+                app:spread_radius="130"
+                app:spread_spread_color="@color/colorAccent"
+                android:visibility="gone"/>
 
             <TextView
                 android:id="@+id/btn_cancel"
